--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -1,6 +1,8 @@
 /* variables */
 :root {
   /* colors */
+  --dark-gray: #1E1E1E;
+  --light-gray: #D9D9D9;
   --yellow: #F0EA00;
 }
 
@@ -15,9 +17,14 @@ p {
 
 /* headings */
 h1, h2, h3, h4, h5, h6 {
-
+  margin: 0;
+  padding: 0;
 }
 
+h1 {
+  font-size: 30px;
+  line-height: 30px;
+}
 
 
 
