--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -10,7 +10,7 @@
 
 /* body family */
 body {
-
+  font-family: var(--font-inter);
 }
 
 p {
@@ -21,6 +21,8 @@ p {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
+  font-family: var(--font-vt323);
+  text-transform: uppercase;
 }
 
 h1 {
