--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -32,3 +32,6 @@ h1 {
 }
 
 [data-radix-popper-content-wrapper] { transform: none !important; min-width: auto; } 
+.mapbox-gl-marker > svg > circle {
+  fill: black;
+}
