--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -7,6 +7,8 @@
   --medium-gray: #BBBBBB;
   --light-gray: #D9D9D9;
   --yellow: #F0EA00;
+  --orange: #FF6622;
+  --background-orange: #FF781F;
 }
 
 /* body family */
@@ -34,4 +36,8 @@ h1 {
 
 .mapbox-gl-marker > svg > circle {
   fill: black;
+}
+
+.with-accent-color {
+  color: var(--orange);
 }
