--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -13,11 +13,12 @@
 
 /* body family */
 body {
-  font-family: var(--font-inter);
+  font-family: var(--font-doto);
   overflow: hidden;
 }
 
 p {
+  color: black;
 
 }
 
@@ -25,7 +26,8 @@ p {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
-  font-family: var(--font-vt323);
+  /*font-family: var(--font-vt323);*/
+  font-family: var(--font-doto);
   text-transform: uppercase;
 }
 
