--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -9,18 +9,25 @@
   --yellow: #F0EA00;
   --orange: #FF6622;
   --background-orange: #FF781F;
+  --background-black: #000500;
+  --background-dot-gray: #2F342F;
+  --background-light-gray: #F2F2F2;
+  --green: #2FCE61;
+  --gray:#545454;
+  --unobtrusive-gray: #7D7D7C;
 }
 
 /* body family */
 body {
   font-family: var(--font-doto);
   overflow: hidden;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 p {
   color: black;
   font-family: var(--font-doto);
+  font-weight: 900;
 }
 
 /* headings */
@@ -30,6 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   /*font-family: var(--font-vt323);*/
   font-family: var(--font-doto);
   text-transform: uppercase;
+  font-weight: 900;
 }
 
 
