--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -6,8 +6,9 @@
   --dark-gray: #1E1E1E;
   --medium-gray: #BBBBBB;
   --light-gray: #D9D9D9;
+  --light-gray-50: rgba(211, 211, 211, 0.5);
   --yellow: #F0EA00;
-  --orange: #FF6622;
+  --orange: #FF781F;
   --background-orange: #FF781F;
   --background-black: #000500;
   --background-dot-gray: #2F342F;
@@ -15,6 +16,7 @@
   --green: #2FCE61;
   --gray:#545454;
   --unobtrusive-gray: #7D7D7C;
+  --white: #FFFFFF;
 }
 
 /* body family */
