--- a/server/packages/frontend/src/styles/global.css
+++ b/server/packages/frontend/src/styles/global.css
@@ -43,10 +43,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
 h1 {
   font-size: 30px;
   line-height: 30px;
+}
+
+h2 {
+  font-size: 48px;
+  line-height: 48px;
 }
 
 .mapbox-gl-marker > svg > circle {
